--- a/src/components/todo-app/todoApp.module.css
+++ b/src/components/todo-app/todoApp.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   width: 40rem;
-  border: 1px solid #ccc;
+  border: 2px solid #4b82d0;
   border-radius: 10px;
   padding: 4rem;
   margin: 0 auto;
